# dust

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTE  CONTRIBUTING.md  INSTALL  INSTALL.md  INSTALL_AEROELASTIC  MBDyn---Dust__build  README  README.html.md  README.md  RELEASE_NOTES  build_instructions  contribute.md  contributors  contributors.md  debug_coupling  install.md  license.md  release_notes.md  todo_2020_05_30.txt
DUST_user_manual/: DUST_user_manual.tex
DUST_user_manual/base/: acronyms.tex  disclaimer.tex  history.tex  metadata.tex
DUST_user_manual/content/: build.tex  content.tex  introduction.tex  mbdyn_coupling.tex  postprocessor.tex  preprocessor.tex  solver.tex
DUST_user_manual/images/: hinge_ref_system.tex  hinges.eps  hinges.tex
cmake/: FindMKL.cmake
doc/: code_style_guide  debug_levels  vorticity_mag_visualization_pw.txt
examples/: README_EXAMPLES  README_EXAMPLES.md
examples/coupled_wings/: main.py  precice-config.xml  rotation.m  run.sh
examples/coupled_wings/dust/: coupling_nodes_left.in  coupling_nodes_right.in  coupling_nodes_test.in  dust.in  dust_post.in  dust_pre.in  fuselage.in  wing_left.in  wing_right.in  wing_right_test.in
examples/coupled_wings/structure/: main.py  refConfigNodes.in  wing.mbd  wing.nod  wing.ref  wing.set  wing_beam.elm  wing_body.elm  wing_joint.elm
examples/dymore_wing/: precice-config.xml
examples/dymore_wing/dust/: coupling_nodes.in  dust.in  dust_post.in  wing.in
examples/dymore_wing/elliptic_wing/: dust.in  dust_post.in  wing.in  wing_archive.in
examples/dymore_wing/rectangular_wing/: dust.in  dust_post.in  dust_pre.in
examples/dymore_wing/rotor1/: dust.in  dust_post.in  dust_pre.in  wing.in  wing1.in  wing2.in  wing3.in
examples/dymore_wing/rotor2/: dust.in  dust_post.in  dust_pre.in  wing.in  wing1.in
examples/dymore_wing/rotor2_dust/: References.in  dust.in  dust_post.in  dust_pre.in  wing.in  wing1.in
examples/dymore_wing/rotor_2b/: dust.in  wing.in
examples/dymore_wing/rotor_4b/: dust_post.in  dust_pre.in
examples/flapped_wing/: dust.in  dust_post.in  hinge_loc.m  wing.in
examples/flapping_wing/: ParamWing.in  README  References.in  dust.in  dust_post.in  dust_pre.in
examples/goland_wing/: main.py  postpro.m  precice-config.xml  run.sh
examples/goland_wing/dust/: References.in  (+5 more)
examples/goland_wing2/: main.py  main2.py  main_dust.py  main_mbdyn.py  postpro.m
examples/robin/: README  References.in  dust.in  dust_post.in  dust_pre.in  geo_input.h5  ll_blade_robin_refined.in  robin-b.cgns  robin-helo.in
examples/robin_test/: dust.in  dust_post.in  dust_pre.in  ll_blade_robin_refined.in
examples/simple_wings/: README  References.in  dust.in  dust_post.in  dust_pre.in  vv_wing_rect.in  wing.in
examples/simple_wings_test/: dust.in  dust_post.in  dust_pre.in  wing.in
examples/simple_wings_test_elliptic/: References.in  dust.in  dust_post.in  dust_pre.in  ellipticalwing_24elem_2chord.in  ellipticalwing_24elem_valentin.in  ellipticalwinggen.py  genSpanwisePoints.py  plotDataByLocation.py  wing.in
examples/simple_wings_test_weird/: dust_post.in
examples/vorticity_plot_test/: dust.in  dust_post.in  dust_pre.in
src/: Doxyfile  TODO  dust.f90  dust_post.f90  dust_potential_test.f90  dust_pre.f90  mod_20190308.txt  ù
src/aeroel/: .mod_aeroel.f90.swo  mod_actuatordisk.f90  mod_aero_elements.f90  mod_aeroel.f90  mod_doublet.f90  mod_liftlin.f90  mod_liftlin.f90.old  mod_stripe.f90  mod_surfpan.f90  mod_vortlatt.f90  mod_vortline.f90  mod_vortpart.f90  mod_vortring.f90  mod_wake.f90  mod_wake_pan.f90  mod_wake_part.f90  mod_wake_ring.f90  mod_wind.f90
src/fmm/: mod_multipole.f90  mod_octree.f90
src/general/: mod_handling.f90  mod_math.f90  mod_param.f90  mod_sim_param.f90  mod_spline.f90  mod_version.f90.in
src/geo/: mod_build_geo.f90  mod_build_geo.f90.bak  mod_geo.f90  mod_geo_postpro.f90  mod_hinges.f90  mod_reference.f90  mod_reference.f90.bak
src/io/: mod_basic_io.f90  mod_c81.f90  mod_cgns_io.f90  mod_dat_out.f90  mod_dust_io.f90  mod_hdf5_io.f90  mod_ll_io.f90  mod_parametric_io.f90  mod_pointwise_io.f90  mod_sim_param.f90  mod_tecplot_out.f90  mod_vtk_out.f90  mod_vtk_utils.f90
src/linsys/: mod_linsys.f90  mod_linsys_vars.f90  mod_pressure_equation.f90
src/options/: mod_isovaryingstring.f90  mod_options.f90  mod_parse.f90  mod_stringtools.f90
src/post/: dust_post_sectional_loads.f90  mod_post_aa.f90  mod_post_chordwise.f90  mod_post_flowfield.f90  mod_post_integral.f90  mod_post_load.f90  mod_post_probes.f90  mod_post_sectional.f90  mod_post_viz.f90
src/precice/: mod_precice.f90  mod_precice_rbf.f90
src/viscosity/: mod_viscosity.f90
test_unsteadiness/: UVLM.m  geo.m  veloce.m  vortex.m  wake.m  wing.m  wingl.m
test_unsteadiness/3DPanel/: build_geometry.m  convert.m  grid_pan.m  influence.m  main.m  naca4digit.m  panel.m  setAirfoil4.m
test_unsteadiness/DUST_simple_wing/: References.in  dust.in  dust_post.in  dust_pre.in  wing.in
test_unsteadiness/figure/: cl_ar.fig  cl_ar_12.fig  cl_ar_20.fig  cl_ar_20_noder.fig  cl_ar_4.fig  cl_ar_4_noder.fig  cl_ar_8.fig
tests/: README  README.md  run_a.py  run_b.py
tests/debug_wake/: main.py  precice-config.xml
tests/hinge_test/: check_loads.m
tests/reg_test_a/: References_dynamic.in  References_static.in  dust_dynamic_base.in  dust_post.in  dust_pre.in  dust_static_base.in  geo_input.h5  wing1.in  wing2.in  wing3.in
tests/reg_test_b/: References.in  blade_ll.in  dust.in  dust_base.in  dust_debug.in  dust_pre.in  erica-nacelle.cgns  nacelle.in
utils/: chordwise_load.m  dust2su2_actdisk.m  sec_load.m
utils/adapter/: mbdynAdapter.py  mbdynInterface.py  run_dust.py  run_mbdyn.py  run_precice.py
utils/parser_post/: chordwise_load.m  probe_load.m  sec_load.m
utils/syntax_conversion/: dust_conversion_dict_061-070.csv  syntax_converter.py
utils/tool_for_PlottingAndModelGeneration/: ellipticalwinggen.py  genLinear3DPoints.py  modifyCoupleNodes.py  plotInflow_inertial.py  plotInflow_polar.py  plotInflow_time.py  plotScalarTogether.py  plotalpha_polar.py  vorticityPlot.py
(+263 files in other folders)
